# eis-klausur

./: Architektur.md  CMakeLists.txt  PacmanWidget.cpp  PacmanWidget.h  README.md  main.cpp
copyme/: level1.txt  level4.txt
game/: Board.cpp  Board.h  Collision.cpp  Collision.h  Game.cpp  Game.h  Object.cpp  Object.h  Position.cpp  Position.h
objects/: Actor.cpp  Actor.h  Ghost.cpp  Ghost.h  PacDot.cpp  PacDot.h  PacPill.cpp  PacPill.h  Player.cpp  Player.h  SmartGhost.cpp  SmartGhost.h  Wall.cpp  Wall.h
rendering/: EndgameRenderer.cpp  EndgameRenderer.h  GameRenderer.cpp  GameRenderer.h  ImageLoader.cpp  ImageLoader.h  MenuRenderer.cpp  MenuRenderer.h
